= Version descriptions

== 7.2.3

- Resolves: gh#150 avoid duplicate entries when exportinging to calendar multiple times

== 7.2.2

- Resolves: gh#178 prevent negative sleep durations

== 7.2.1

- Resolves: gh#184 fixed overlapped and blocked texts on main page (yuhuitech)

== 7.2.0

- Resolves: gh#161 main activity: make the rating widget read-only

== 7.1.5

- Resolves: gh#157 hint that swiping the sleep will delete it
- Resolves: gh#162 avoid empty screen when scrolling down in the stats activity (usashiki)

== 7.1.4

- Resolves: gh#138 sleep edit / delete: handle automatic backup

== 7.1.3

- Resolves: gh#94 Add quick settings tile to start/stop tracking

== 7.1.2

- Awake-for and rating property of the sleep card is now hidden by default

== 7.1.1

- Resolves: gh#51 add a graphs menu item and activity to chart various stats over time (usashiki)
- Resolves: gh#92 add a widget to start/stop tracking with a single stap from the home screen
- Display time awake after a sleep on the main screen (Sebastian Zeller)
- Resolves: gh#88 Add dashboard duration setting (usashiki)

== 7.1.0

- Resolves gh#90 disable auto-backup bool setting when the user refuses to pick an auto-backup
  folder

== 7.0.5

- Avoid vibration when the sleep notification is created
- Resolves: gh#32 ability to automatically backup to a storage folder, to be used with e.g.
  Nextcloud

== 7.0.4

- Much faster mass-import of sleeps from a previous export result

== 7.0.3

- Resolves: gh#41 ability to export events to your calendar (Ed George)

== 7.0.2

- Added PT-BR translation (fabianski7)
- Tested on Android 11
- Removed not needed custom fonts, now using default regular/bold fonts from the system
- Resolves: gh#33 main activity: don't delete entry by swiping on the rating bar
- Resolves: gh#29 ability to import events from your calendar (Ed George)

== 7.0.1

- Fix missing localization of the notification channel's name